--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <img src="">
 <input type="text">
-<button></button>
- <button></button>   
+<button>Google Search</button>
+ <button>I'm Feeling Lucky</button>   
 </body>
 </html>
