--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-<img src="">
-<input type="text">
-<button>Google Search</button>
- <button>I'm Feeling Lucky</button>   
+
+
+    <div class="main">
+
+<img class="logo-img" src="" alt="">
+<input class="search-input" type="text">
+
+    <div class="nested div">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky</button>  
+    </div>
+
+    </div>
 </body>
 </html>
