--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
     <div class="main">
 
-<img class="logo-img" src="" alt="">
-<input class="search-input" type="text">
+        <img class="logo-img" src="./images/google pic.png" alt="">
+        <input class="search-input" type="text">
 
-    <div class="nested div">
-        <button>Google Search</button>
-        <button>I'm Feeling Lucky</button>  
-    </div>
+            <div class="nested div">
+                <button class="btn">Google Search</button>
+                <button class="btn">I'm Feeling Lucky</button>  
 
     </div>
 </body>
