--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
     <div class="main">
 
         <img class="logo-img" src="./images/google pic.png" alt="">
+        
         <input class="search-input" type="text">
 
-            <div class="nested div">
-                <button class="btn">Google Search</button>
-                <button class="btn">I'm Feeling Lucky</button>  
+            <div class="btn-wrapper">
 
+                <button class="btn">Google Search</button>
+
+                <button class="btn">I'm Feeling Lucky</button> 
+
+            </div>
     </div>
 </body>
 </html>
